programming/articles/EffectiveJava/pages/page_0149.txt
CHAPTER 5
GENERICS
128
For example, suppose you want to write a Chooser class with a constructor
that takes a collection, and a single method that returns an element of the collec-
tion chosen at random. Depending on what collection you pass to the constructor,
you could use a chooser as a game die, a magic 8-ball, or a data source for a
Monte Carlo simulation. Here’s a simplistic implementation without generics:
// Chooser - a class badly in need of generics!
public class Chooser {
private final Object[] choiceArray;
public Chooser(Collection choices) {
choiceArray = choices.toArray();
}
public Object choose() {
Random rnd = ThreadLocalRandom.current();
return choiceArray[rnd.nextInt(choiceArray.length)];
}
}
To use this class, you have to cast the choose method’s return value from
Object to the desired type every time you use invoke the method, and the cast will
fail at runtime if you get the type wrong. Taking the advice of Item 29 to heart, we
attempt to modify Chooser to make it generic. Changes are shown in boldface:
// A first cut at making Chooser generic - won't compile
public class Chooser<T> {
private final T[] choiceArray;
public Chooser(Collection<T> choices) {
choiceArray = choices.toArray();
}
// choose method unchanged
}
If you try to compile this class, you’ll get this error message:
Chooser.java:9: error: incompatible types: Object[] cannot be 
converted to T[]
        choiceArray = choices.toArray();
                                     ^
  where T is a type-variable:
    T extends Object declared in class Chooser